# yolov8-onnx-cpp

./: .gitignore  CMakeLists.txt
src/: main.cpp
